--- a/about/index.html
+++ b/about/index.html
@@ -3,37 +3,131 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title></title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-  <!--[if IE]>
+  <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="../https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+  <header>
+    <div class="content-wrapper">
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+        <h1>Our mission - We want to make you the team you always wanted to be.</h1>
+        <p>Cu nec facete scaevola eleifend, id facete mollis omittam per, in justo omnesque iudicabit vel. Stet quando at his, amet vivendum eu cum. An nullam fierent nam, purto dolorum at cum, case fastidii nam eu. Nam perfecto periculis signiferumque ad, viderer salutandi interesset pri ad. Mei legendos voluptatibus ex, ad per nominavi perpetua.</p>
+       </div>
+      </div>
+    </section>
+    <section class="map">
+        <figure>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255281.1903618072!2d103.70416145613204!3d1.3143393875119778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da11238a8b9375%3A0x887869cf52abf5c4!2sSingapore!5e0!3m2!1sen!2ssg!4v1568800462220!5m2!1sen!2ssg" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </figure>
+
+    </section>
+
+  </main> <!-- main wrapper -->
+
+<div classs="contact-section">
+ <div class = "content-wrapper">
+  <h1> Contact us, because you all need this.</h1>
+    <div class="general-contact-info">
+     <h3>General information</h3>
+     <p>444 Middle of the Lake Como, Italy, 76543</p>
+     <p>555-555-5555</p>
+     <p>hello@unplugged.com</p>
+    </div>
+
+  <div class="facilitator-contact">
+    <h3>Chat with a facilitator</h3>
+    <p>555-555-556</p>
+    <p>facilitator@unplugged.com</p>
+  </div>
+
+</div>
+</div>
+
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4>Contact</h4>
+          <p>
+            555-555-5555<br>
+            hello@unplugged.com
+          </p>
+        </address>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+            </p>
+          </div>
+        </div>
+      </div> <!-- footer content ends -->
+    </div>
+    <!--footer content-wrapper ends-->
+    <div class="copyright">
+      <p>Copyright 2018 | Unplugged</p>
+    </div>
+  </footer>
+
+  <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script>
+    window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
+
+  </script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+    window.ga = function () {
+      ga.q.push(arguments)
+    };
+    ga.q = [];
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview')
+
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
