--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,10 @@
   <link rel="manifest" href="../site.webmanifest">
   <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <!-- FontAwesome CDN version 5.5 -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -24,14 +27,16 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="../index.html">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="index.html" target="_blank">About</a></li>
+          <li><a href="index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -41,40 +46,51 @@
 
     <section class="mission">
       <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
         <div class="mission-content">
-        <h1>Our mission - We want to make you the team you always wanted to be.</h1>
-        <p>Cu nec facete scaevola eleifend, id facete mollis omittam per, in justo omnesque iudicabit vel. Stet quando at his, amet vivendum eu cum. An nullam fierent nam, purto dolorum at cum, case fastidii nam eu. Nam perfecto periculis signiferumque ad, viderer salutandi interesset pri ad. Mei legendos voluptatibus ex, ad per nominavi perpetua.</p>
-       </div>
-      </div>
-    </section>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
+        </div>
+      </div> <!-- mission content wrapper ends -->
+    </section> <!-- contact-info -->
+
     <section class="map">
-        <figure>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255281.1903618072!2d103.70416145613204!3d1.3143393875119778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da11238a8b9375%3A0x887869cf52abf5c4!2sSingapore!5e0!3m2!1sen!2ssg!4v1568800462220!5m2!1sen!2ssg" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </figure>
+      <figure>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.264848877189!2d-88.42986248453636!3d42.59212397917199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbbacb5568f%3A0xac5d9a1fbeb32534!2s333+W+Main+St%2C+Lake+Geneva%2C+WI+53147!5e0!3m2!1sen!2sus!4v1541558469187" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </figure>
+  </section>
 
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <address class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <p>
+              333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <p>
+              555-555-5556<br>
+              facilitator@unplugged.com
+            </p>
+          </div>
+        </address> <!-- contact-content div ends -->
+      </div> <!-- contact content wrapper ends -->
     </section>
-
   </main> <!-- main wrapper -->
-
-<div classs="contact-section">
- <div class = "content-wrapper">
-  <h1> Contact us, because you all need this.</h1>
-    <div class="general-contact-info">
-     <h3>General information</h3>
-     <p>444 Middle of the Lake Como, Italy, 76543</p>
-     <p>555-555-5555</p>
-     <p>hello@unplugged.com</p>
-    </div>
-
-  <div class="facilitator-contact">
-    <h3>Chat with a facilitator</h3>
-    <p>555-555-556</p>
-    <p>facilitator@unplugged.com</p>
-  </div>
-
-</div>
-</div>
-
 
   <footer>
     <div class="content-wrapper">
@@ -90,13 +106,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </p>
             <p>
-              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+              <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
